--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
     <head>
         <link rel="stylesheet" href="style.css">
         <link rel="stylesheet" href="mobilestyle.css">
-        <link rel="manifest" href="/manifest.json">
-
+	<script src="script.js"></script>
+        <link rel="manifest" href="manifest.json">
+	<link rel="apple-touch-icon" sizes="512x512" href="./resources/icon512.png">
 
     </head>
     <body onload="start();"> 
@@ -14,7 +15,6 @@
                 <div id = "popup"><h1>Congrats!</h1><br><h2>You Have Won!</h2><br><span id="moves"></span><br><button id="restart" onclick="start();">restart</button></div>
             </div>
         </div>
-        <script src="script.js"></script>
 
     </body>
 </html>
