--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
     </head>
     <body onload="start();"> 
+        <button onclick="sendJSON();">button</button>
         <div id="title" style="background-color: #222831; height: 100vh; width: 100vw; justify-content: center; text-align: center;"><h1>Memory Game</h1>
             <div id="memoryGame" style="position: absolute; height: 85vh; width: 100vw; background-color: rgb(79, 79, 79); margin-top: 5vh;"></div>
             <div id = "popupDiv" style="height: 100%; width: 100%; position:absolute; margin-top:15px; text-align: center; visibility:hidden;">
